# legendary-happiness

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  CAPABILITIES-REPORT.md  FORGE-BACKLOG.md  FORGE-STACK.md  HUB-AUDIT.md  HUB-ODYSSEUS-REFRESH.md  PRE-FIX-TESTS.md  README.md  SPATIAL-SLICE-ROADMAP.md  SPATIAL-STAGE-3-5-PLAN.md  STAGE-2-HANDOFF.md  STAGE-2.1-HANDOFF.md  STAGE-4-REBALANCE-PLAN.md  TESTBENCH-MIGRATION-HANDOFF.md  TESTING-SYSTEM-DESIGN.md  pyproject.toml
docs/: CONTINUATION-PLAYBOOK.md  INDEX.md
engine/: .gitignore  CAPABILITY-ROADMAP.md  CHANGES.md  CRITIQUE-NINE-CAPABILITIES.md  Deferred-Claude-Recommendations.md  Procfile  README.md  STAGE-4-COMPLETE.md  SUMMARY.md  TUNING.md
engine/terraforge_project_meta/: CHANGELOG.md  README.md  main.tscn  project.godot  pyproject.toml  pytest.ini
foundry/: __main__.py  _apply_p12_reviewer_fixes.py  _apply_q17_dp_emission.py  _constants.py  age_resolver.py  asset_ensure.py  behaviour_gen.py  biome_recipe.py  biome_table.py  brief.py  build_state.py  category_registry.py  comp_tags.py  compiler.py  conftest.py  decisions.py  dialogue_validator.py  examine_validator.py  exterior_compiler.py  exterior_planner.py  gate.py  glb_postprocess.py  hunyuan_postprocess.py  hunyuan_queue.py  hunyuan_worker.py  interpreter.py  library.py  lighting_bake.py  lighting_planner.py  lighting_prebake.py  lighting_resolve.py  llm.py  manifest_to_world.py  material_classes.py  material_resolver.py  materials.py  navmesh.py  npc_sim.py  overnight_assets.py  palette.py  (+27 more)
hub/: CHAIN-PROBES-DESIGN.md  GAME-MODE.md  README.md  bench.py  (+14 more)
(+984 files in other folders)
